[gd_scene load_steps=20 format=3 uid="uid://djenc4llne53s"]

[ext_resource type="Script" uid="uid://c2rn7sdv7k58i" path="res://Scenes and Scripts/Scenes/Credits/CreditsLayer_SCRIPT.gd" id="1_wf8c4"]
[ext_resource type="Script" uid="uid://bd3squcstkss1" path="res://Scenes and Scripts/Utility Scripts/PassMouseFilter.gd" id="2_anj2t"]
[ext_resource type="StyleBox" uid="uid://3txnt8ebd3yh" path="res://Resources/Styles and Themes/Styles/Default/Backgrounds and Foregrounds/BlackBGwithWhiteBorder.tres" id="3_1pdi7"]
[ext_resource type="StyleBox" uid="uid://b4rpbqptdum20" path="res://Resources/Styles and Themes/Styles/Default/Backgrounds and Foregrounds/DarkGreyBGwithGreyBorder.tres" id="4_a8p6x"]
[ext_resource type="Theme" uid="uid://ceasxu5q233w7" path="res://Resources/Styles and Themes/Themes/Default.tres" id="5_ome4s"]
[ext_resource type="FontFile" uid="uid://c4h0gd5a2e2qb" path="res://Fonts/CabinetGrotesk/CabinetGrotesk-Extrabold.otf" id="6_8b5y6"]
[ext_resource type="FontFile" uid="uid://b2o44xwqnsb5k" path="res://Fonts/CabinetGrotesk/CabinetGrotesk-Black.otf" id="6_qtck1"]
[ext_resource type="Texture2D" uid="uid://cwskjvl8pplog" path="res://Textures/Icons/Exit_Icon.png" id="7_5nk2s"]
[ext_resource type="FontFile" uid="uid://bxegprouyv1nh" path="res://Fonts/CabinetGrotesk/CabinetGrotesk-Medium.otf" id="7_qra30"]
[ext_resource type="FontFile" uid="uid://bhbimgl3hvve3" path="res://Fonts/CabinetGrotesk/CabinetGrotesk-Bold.otf" id="8_uiqvs"]
[ext_resource type="FontFile" uid="uid://btimp4hwg4jis" path="res://Fonts/CabinetGrotesk/CabinetGrotesk-Regular.otf" id="9_3uiju"]
[ext_resource type="StyleBox" uid="uid://b13po6off8nno" path="res://Resources/Styles and Themes/Styles/Default/Button/WithMarginDefaultDarkGrey.tres" id="10_623a3"]
[ext_resource type="Texture2D" uid="uid://bkbj6pcey3rc6" path="res://Textures/Icons/RedHeart_Icon.webp" id="11_m50j2"]
[ext_resource type="StyleBox" uid="uid://com3tix0pshhk" path="res://Resources/Styles and Themes/Styles/Default/Label/Default_Label.tres" id="11_p84et"]
[ext_resource type="Texture2D" uid="uid://dkkcljrkavbjx" path="res://Textures/Icons/OpenExternalLinkWhite_Icon.png" id="12_lbc4b"]
[ext_resource type="Texture2D" uid="uid://ca5jdf2d4rrm4" path="res://Textures/Icons/Godot_Icon.png" id="15_ny2xt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1cec2"]
bg_color = Color(0.125911, 0.125911, 0.125911, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 5.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_71xan"]
bg_color = Color(0.255659, 0.255659, 0.255659, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_wxeot"]
default_font = ExtResource("8_uiqvs")
Button/styles/hover = SubResource("StyleBoxFlat_1cec2")
Button/styles/normal = ExtResource("10_623a3")
Button/styles/pressed = SubResource("StyleBoxFlat_71xan")
Label/styles/normal = ExtResource("11_p84et")

[node name="CreditsLayer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wf8c4")

[node name="GreyLayer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.643)
script = ExtResource("2_anj2t")

[node name="MainLayer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BG" type="Button" parent="MainLayer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -235.5
offset_right = 192.0
offset_bottom = 235.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("3_1pdi7")
theme_override_styles/pressed = ExtResource("3_1pdi7")
theme_override_styles/normal = ExtResource("3_1pdi7")
script = ExtResource("2_anj2t")

[node name="TextBG" type="Button" parent="MainLayer"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.327257
anchor_top = 0.150463
anchor_right = 0.672743
anchor_bottom = 0.849537
offset_left = 22.9999
offset_top = 51.5
offset_right = -23.9999
offset_bottom = -5.5
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme_override_styles/hover = ExtResource("4_a8p6x")
theme_override_styles/pressed = ExtResource("4_a8p6x")
theme_override_styles/normal = ExtResource("4_a8p6x")
script = ExtResource("2_anj2t")

[node name="ScrollContainer" type="ScrollContainer" parent="MainLayer"]
layout_mode = 0
offset_left = 417.0
offset_top = 162.0
offset_right = 735.0
offset_bottom = 533.0
scroll_vertical = 510

[node name="VBoxContainer" type="VBoxContainer" parent="MainLayer/ScrollContainer"]
layout_mode = 2
alignment = 1

[node name="Text" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 100)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("6_8b5y6")
theme_override_font_sizes/font_size = 23
text = "Expland is made by Noe Co., a partnership of two looking to find joy in making games."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text2" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("7_qra30")
theme_override_font_sizes/font_size = 20
text = "Expland is brought to you by:"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Divider" type="Line2D" parent="MainLayer/ScrollContainer/VBoxContainer"]
position = Vector2(20, 133)
points = PackedVector2Array(-2, 0, 264, 0)
width = 1.5
default_color = Color(0.233926, 0.233925, 0.233925, 1)

[node name="Space" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="Space2" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 2
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text3" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 20
text = "Sebastian Suciu"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text4" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("9_3uiju")
theme_override_font_sizes/font_size = 14
text = "Game Designer, Visual Designer, Programmer, 3D modelling, 2D assets, paperwork and GitHub manager."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Space5" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text5" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 20
text = "Tristan Taylor"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text6" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("9_3uiju")
theme_override_font_sizes/font_size = 14
text = "Game Designer, Visual Designer, Audio Designer, Storyteller, Tester (while developing), paperwork, 3D modelling, 2D assets, Ideas and brainstorming and Lore."
horizontal_alignment = 1
autowrap_mode = 3

[node name="Space12" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
autowrap_mode = 3

[node name="Space13" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
autowrap_mode = 3

[node name="Space14" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text7" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("6_8b5y6")
theme_override_font_sizes/font_size = 20
text = "We would like to thank everyone who contributed to this huge project and supported us!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Divider3" type="Line2D" parent="MainLayer/ScrollContainer/VBoxContainer"]
position = Vector2(20, 351)
points = PackedVector2Array(-2, 0, 264, 0)
width = 1.5
default_color = Color(0.233926, 0.233925, 0.233925, 1)

[node name="Space3" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text8" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 20
text = "Ingo Wolf"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text9" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("9_3uiju")
theme_override_font_sizes/font_size = 14
text = "For ever so kindly making us a website. Thank you!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Space4" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text10" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 20
text = "Mel Timpson"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text11" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("9_3uiju")
theme_override_font_sizes/font_size = 14
text = "For being the best school teacher and mentor, getting us through highschool. From the bottom of our hearts, thank you Miss!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Space6" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text15" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 20
text = "Godot Engine"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text16" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("9_3uiju")
theme_override_font_sizes/font_size = 14
text = "Without Godot, this entire project may not have been possible. To all the contributors of the Godot Engine, we can't thank you enough!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="GodotIcon" type="Sprite2D" parent="MainLayer/ScrollContainer/VBoxContainer"]
position = Vector2(115, 734)
scale = Vector2(0.06, 0.06)
texture = ExtResource("15_ny2xt")

[node name="RedHeartIcon" type="Sprite2D" parent="MainLayer/ScrollContainer/VBoxContainer"]
position = Vector2(189.375, 736.044)
scale = Vector2(0.0657484, 0.0545605)
texture = ExtResource("11_m50j2")

[node name="Space9" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
autowrap_mode = 3

[node name="Space11" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
autowrap_mode = 3

[node name="Text14" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("9_3uiju")
theme_override_font_sizes/font_size = 14
text = "You can find a full list of everyone involved by viewing the AUTHORS.md file, which can be accessed below. "
horizontal_alignment = 1
autowrap_mode = 3

[node name="Space10" type="Label" parent="MainLayer/ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("8_uiqvs")
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
autowrap_mode = 3

[node name="Open_AUTHORS_md" type="Button" parent="MainLayer/ScrollContainer/VBoxContainer"]
layout_mode = 2
focus_mode = 0
theme = SubResource("Theme_wxeot")
theme_override_font_sizes/font_size = 30
text = "OPEN      "

[node name="OpenExternalLinkWhiteIcon" type="Sprite2D" parent="MainLayer/ScrollContainer/VBoxContainer"]
position = Vector2(188.375, 861.625)
scale = Vector2(0.103333, 0.103333)
texture = ExtResource("12_lbc4b")

[node name="Title" type="Label" parent="MainLayer"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -127.5
offset_top = 101.0
offset_right = 127.5
offset_bottom = 142.0
grow_horizontal = 2
theme = ExtResource("5_ome4s")
theme_override_fonts/font = ExtResource("6_qtck1")
theme_override_font_sizes/font_size = 35
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="TextureButton" parent="MainLayer"]
layout_mode = 0
anchor_left = 0.348958
anchor_top = 0.157407
anchor_right = 0.381076
anchor_bottom = 0.214506
texture_normal = ExtResource("7_5nk2s")
ignore_texture_size = true
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MainLayer/ScrollContainer/VBoxContainer/Open_AUTHORS_md" to="." method="_on_open_authors_md_pressed"]
[connection signal="mouse_entered" from="MainLayer/CloseButton" to="." method="_on_close_button_mouse_entered"]
[connection signal="mouse_exited" from="MainLayer/CloseButton" to="." method="_on_close_button_mouse_exited"]
[connection signal="pressed" from="MainLayer/CloseButton" to="." method="_on_close_button_pressed"]
